# coax

./: .gitignore  CURRENTPROMPT.md  Cargo.toml  DEVELOPMENT.md  ENTROPY-TEST-REPORT.md  GITHUB-SYNC-VERIFIED.md  HANDOFF.md  QAANDSTRATEGY.md  QWEN.md  README.md  RELEASE-NOTES-v0.4.0.md  RELEASE-NOTES-v0.5.0.md  RELEASE-NOTES-v0.6.0.md  RELEASE-NOTES-v0.6.2.md  RELEASE-NOTES-v0.7.4.md  RELEASE-NOTES-v0.7.5.md  REPOHANDOFF.md  V0.7.0-COMPLETE.md  VSCode-EXTENSION-SUMMARY.md
.github/: secret_scanning.yml
.github/workflows/: build-vscode-extension.yml
coax-benchmarks/: README.md  run-benchmarks.sh
coax-benchmarks/datasets/git-history/: README.md  create-test-repo.sh
coax-benchmarks/datasets/secrets-expanded/: ground-truth.yaml
coax-benchmarks/datasets/secrets-expanded/true-negatives/: Dockerfile  analytics-ids.js  api-response.json  base64-content.txt  css-hex-colors.css  (+19 more)
coax-benchmarks/results/: BENCHMARK-RESULTS-CORRECTED.md  BENCHMARK-RESULTS-v0.8.3.md  COMPARISON-REPORT-v0.8.3.md
coax-benchmarks/results/history/: results-20260316-201232.md  results-20260316-201343.md  results-20260316-201431.md  results-20260316-201501.md
coax-benchmarks/results/raw/: coax-secrets.json  coax-unicode.json  gitleaks-secrets.json  gitleaks-unicode.json  trufflehog-secrets.json  trufflehog-unicode.json
coax-benchmarks/scripts/: generate-expanded-corpus.sh  generate-ground-truth.py
coax-vscode/: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
coax-vscode/src/: extension.ts
coax-vscode/src/actions/: codeActions.ts
coax-vscode/src/commands/: index.ts
coax-vscode/src/diagnostics/: hoverProvider.ts  index.ts
coax-vscode/src/scanner/: index.ts
coax-vscode/src/statusbar/: index.ts
config/patterns/: README.md  ai_ml_apis.yml  cloud_providers.yml  communication_apis.yml  database_connections.yml  payment_processors.yml  private_keys.yml  secrets_patterns_db.yml  version_control.yml
crates/coax-cli/: Cargo.toml
crates/coax-cli/src/: main.rs
crates/coax-scanner/: Cargo.toml  PERFORMANCE-REPORT.md
crates/coax-scanner/benches/: scanner_benchmarks.rs
crates/coax-scanner/examples/: test_git_history.rs
crates/coax-scanner/src/: baseline.rs  context.rs  encoded_detection.rs  entropy_filter.rs  entropy_filter.rs.broken  lib.rs  pattern_cache.rs  pattern_loader.rs  result.rs  sarif_output.rs  scanner.rs  scanner.rs.bak  secrets.rs  source_provider.rs  token_efficiency.rs  word_filter.rs
crates/coax-scanner/src/cfg/: backward.rs  builder.rs  entry_points.rs  forward.rs  intersection.rs  mod.rs  sinks.rs  types.rs
crates/coax-scanner/src/detector/: mod.rs
crates/coax-scanner/src/unicode/: config.rs  findings.rs  mod.rs  ranges.rs  scanner.rs  script_detector.rs
crates/coax-scanner/src/unicode/confusables/: data.rs  mod.rs
crates/coax-scanner/src/unicode/detectors/: bidi.rs  glassworm.rs  homoglyph.rs  invisible.rs  invisible.rs.bak  mod.rs  tags.rs
crates/coax-scanner/tests/: cfg_tests.rs  entropy_tests.rs  fp_reduction_tests.rs  pattern_tests.rs  unicode_tests.rs
crates/coax-threat-model/: Cargo.toml
crates/coax-threat-model/src/: correlation.rs  dfd.rs  generator.rs  lib.rs  model.rs  stride.rs
crates/coax-threat-model/tests/: integration_tests.rs
crates/coax-tui/: Cargo.toml  README.md
crates/coax-tui/src/: app.rs  lib.rs  ui.rs
crates/coax-tui/src/components/: footer.rs  header.rs  mod.rs
crates/coax-tui/src/events/: handler.rs  mod.rs
crates/coax-tui/src/views/: dashboard.rs  finding_detail.rs  finding_list.rs  mod.rs  settings.rs
crates/coax-tui/tests/: integration_tests.rs
docs/: BENCHMARK-METHODOLOGY.md  BENCHMARKFIX-PHASE2-FINAL.md  BENCHMARKV2.md  BENCHMARKV3.md  BUILD-INSTRUCTIONS.md  HANDOFF.md  PHASE3-FEATURES.md  PHASE3-PROPOSAL.md  QA-TESTING-PLAN-v0.7.4.md  STRATEGIC-ROADMAP-UPDATE.md  V0.8.3-PLAN.md  V82DEEPDIVE.md  V82SPEC.md  V8GITHUBWORKFLOW.md  VSCode-EXTENSION-SPEC.md  VSCode-EXTENSION-TIMELINE.md
docs/archive/: BENCHMARK-PLAN.md  BENCHMARKFIX-PHASE2-SUMMARY.md  BENCHMARKFIX.md  BENCHMARKV35.md  BENCHMARKV4.md  CLI-UNICODE-FLAGS-STATUS.md  CODEREVIEW-VERSION4.md  FP-REDUCTION-IMPLEMENTATION.md  FP-REDUCTION-RESULTS.md  HOMOGLYPHFIX.md  PHASE3-P1-TASKS.md  PHASE3-PROPOSAL.md  QA-METHODOLOGY.md  QA-PLAN.md  SOTA-COMPARISON.md  UNICODE-IMPLEMENTATION-SUMMARY.md  UNICODE-INTEGRATION-FIXES.md  UNICODEATTACK.md  UNICODECODEREVIEW.md  V0.8.2-PLAN.md  V8BUGFIX.md  V8CODEREVIEW.md  V8CROSSPLATFORM.md  V8MPCHECKLIST.md  V8PROMPT.md
docs/design/: DETECTOR-MODEL-DESIGN.md  VERIFICATIONDESIGN.md
docs/research/: betterleaks-analysis.md  cfg-slicing-research.md  entropy-detection-research.md  modular-pattern-system-proposal.md  phase3-sota-analysis.md  recommendations.md  secrets-patterns-db-analysis.md  secrets-patterns-db-integration.md  threat-model-integration.md  tui-dashboard-design.md  vscode-extension-research.md  vulnllm-hosting-analysis.md
qa/: QA-DELEGATION-PROMPT.md  QA-REPORT-v0.6.2.md  README.md  bidi_test.js  cjk_test.js  coax-anti-trojan-results.json  emoji_test.js  glassworm_test.js  greek_i18n_test.js  greek_legitimate_test.js  homoglyph_test.js  i18n_test.js  large_test.js  mixed_script_attack_test.js  qa-template.md  variation_test.js
qa/results/: BENCHMARK-SUMMARY.md  TEMPLATE.md  benchmarks-memory.txt  benchmarks-speed.txt  large-kubernetes.json  medium-actix.json  medium-axios.json  medium-express.json  medium-flask.json  medium-pydantic-v2.json  medium-pydantic.json  small-clap.json  small-requests.json  small-serde.json  small-tokio.json  time-small.txt
qa/test-repos/false-positive-tests/: README.md  actual_secrets.py  real_secrets_test.py  test_false_positives.py
qa/test-repos/large/: .env.dev  .env.staging  .env.test  README.md  generate.sh
qa/test-repos/legacy/: README.md  config.php
qa/test-repos/medium/: .env.production  README.md
qa/test-repos/mixed-language/: README.md
qa/test-repos/small/: .env  README.md  clean_module.py  config.py  database.py  utils.py
qa/test-repos/unicode-test/: config.py
scripts/: convert_spdb_to_coax.py  pre-commit
(+533 files in other folders)
