[workspace]
resolver = "2"
members = [
    "crates/coax-scanner",
    "crates/coax-cli",
    "crates/coax-tui",
]

[workspace.package]
name = "coax"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gl33mer/coax"
readme = "README.md"
keywords = ["security", "scanner", "secrets", "vulnerability", "cli"]
categories = ["development-tools", "command-line-utilities"]
description = "Coax secrets and vulnerabilities out of your codebases"

[workspace.dependencies]
# Internal crates
coax-scanner = { path = "crates/coax-scanner", version = "0.2.0" }
coax-tui = { path = "crates/coax-tui", version = "0.2.0" }

# Core dependencies
regex = "1.10"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Parallel processing
rayon = "1.8"

# File walking
walkdir = "2.4"
ignore = "0.4"

# Benchmarking
criterion = "0.5"

# Testing
tokio = { version = "1.35", features = ["full"] }
tempfile = "3.9"

# Base64 for entropy detection
base64 = "0.21"

# Lazy static initialization
lazy_static = "1.4"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"

[profile.bench]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
