[package]
name = "coax-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance security scanner for coaxing secrets from repositories"
keywords = ["security", "scanner", "secrets", "performance"]
categories = ["development-tools", "security"]

[dependencies]
# Core dependencies
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Parallel processing
rayon = { workspace = true }

# File walking
walkdir = { workspace = true }
ignore = { workspace = true }

# Optional: entropy calculation for high-entropy string detection
base64 = { workspace = true }

# Lazy static initialization
lazy_static = { workspace = true }

# Token efficiency (BPE-based detection from Betterleaks)
tiktoken-rs = "0.9.1"

# Word filter (Aho-Corasick algorithm from Betterleaks)
aho-corasick = "1.1.4"

[dev-dependencies]
# Benchmarking
criterion = "0.5"
tempfile = "3.9"

# Testing
tokio = { version = "1.35", features = ["full"] }

[[bench]]
name = "scanner_benchmarks"
harness = false

[features]
default = []
parallel = []  # Feature flag for parallel scanning (enabled by default via rayon)
