[package]
name = "coax-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance security scanner for coaxing secrets from repositories"
keywords = ["security", "scanner", "secrets", "performance"]
categories = ["development-tools", "security"]

[dependencies]
# Core dependencies
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Parallel processing
rayon = { workspace = true }

# File walking
walkdir = { workspace = true }
ignore = { workspace = true }

# Optional: entropy calculation for high-entropy string detection
base64 = { workspace = true }
# Baseline functionality
sha2 = "0.10"
hex = "0.4"
# CFG-based vulnerability slicing
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
oxc_cfg = "0.39"
petgraph = "0.6"
chrono = { version = "0.4", features = ["serde"] }

# Lazy static initialization
lazy_static = { workspace = true }

# Unicode support
unicode-segmentation = "1.12"
unicode_names2 = "1.3"
unicode-script = "0.5"

# Token efficiency (BPE-based detection from Betterleaks)
tiktoken-rs = "0.9.1"

# Word filter (Aho-Corasick algorithm from Betterleaks)
aho-corasick = "1.1.4"

# Git support (for GitHistoryProvider)
git2 = "0.18"

[dev-dependencies]
# Benchmarking
criterion = "0.5"
tempfile = "3.9"

# Testing
tokio = { version = "1.35", features = ["full"] }

[[bench]]
name = "scanner_benchmarks"
harness = false

[features]
default = []
parallel = []  # Feature flag for parallel scanning (enabled by default via rayon)


