[package]
name = "coax-threat-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Threat modeling for coax security scanner with STRIDE categorization"
keywords = ["security", "threat-model", "stride", "dfd", "risk"]
categories = ["development-tools", "security"]

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Internal scanner
coax-scanner = { workspace = true }

# File walking
walkdir = { workspace = true }
ignore = { workspace = true }

# Error handling
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.9"
tokio = { version = "1.35", features = ["full"] }
