[package]
name = "coax-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TUI dashboard for coax security scanner"
keywords = ["security", "scanner", "tui", "dashboard"]
categories = ["development-tools", "security", "command-line-utilities"]

[dependencies]
# Internal crates
coax-scanner = { workspace = true }

# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# CLI framework (for integration)
clap = { version = "4.5", features = ["derive"] }

# File operations
walkdir = { workspace = true }

# Error handling
anyhow = "1.0"

# Output formatting
colored = "2.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.9"
tokio = { version = "1.35", features = ["full"] }
